[package]
name = "caltry"
version = "0.1.0"
edition = "2024"

[dependencies]
butane = { version = "0.8.0", features = ["sqlite"] }
rocket = "0.5.1"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "write_post"
doc = false
