[package]
name = "caltry"
version = "0.1.0"
edition = "2024"

[dependencies]
butane = { version = "0.8.0", features = ["async", "datetime", "fake", "r2d2", "sqlite"] }
chrono = { version = "0.4.41", features = ["serde"] }
r2d2 = "0.8.10"
rocket = "0.5.1"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
